# expirable

./: README.md  expirable.h
example/: CMakeLists.txt  main.cpp
